--- a/cyberP/templates/cyberP/cyberparlements/cyberparlement_detail.html
+++ b/cyberP/templates/cyberP/cyberparlements/cyberparlement_detail.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% block content %}
+    {% if cyberparlement.cyberparlementparent %}
+        <a href="{% url 'cyberP:cyberparlement-detail' pk=cyberparlement.cyberparlementparent.idcyberparlement %}">
+            <button>Retour</button>
+        </a>
+    {% else %}
+        <a href="{% url 'cyberP:cyberparlement-list' %}">
+            <button>Retour</button>
+        </a>
+    {% endif %}
+    <h1>{{ cyberparlement.nom }}</h1>
+    <p>{{ cyberparlement.description }}</p>
+    {% for c in cyberparlements %}
+        <a href="{% url 'cyberP:cyberparlement-detail' pk=c.idcyberparlement %}">
+            <div style="padding: 10px; border: black solid 1px; margin-bottom: 5px">
+                {{ c.nom }}
+                <a href="{% url 'cyberP:cyberparlement-update' pk=c.idcyberparlement %}">
+                    <button>Modifier</button>
+                </a>
+            </div>
+        </a>
+    {% endfor %}
+{% endblock content %}
