Choix du cyberchancelier d'un cyberparlement

--- a/ceffdevCyberP/templates/base.html
+++ b/ceffdevCyberP/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CyberParlement</title>
+    <script src="{% static 'cyberP/js/cyberchancelier_choice.js' %}" crossorigin="anonymous" type="module"></script>
 </head>
 <body>
 {% block content %}
