--- a/cyberP/templates/cyberP/cyberparlements/cyberparlement_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/cyberparlement_list.html
@@ -1,5 +1,5 @@
 {% block content %}
-     {{ test|safe }}
+     {{ content|safe }}
 {#    <h1>Liste des Cyberparlements</h1>#}
 {#    {% for c in cyberparlements %}#}
 {#        <a href="{% url 'cyberP:cyberparlement-detail' pk=c.idcyberparlement %}">#}
