--- a/ceffdevCyberP/templates/base.html
+++ b/ceffdevCyberP/templates/base.html
@@ -4,8 +4,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CyberParlement</title>
+    <script src="https://kit.fontawesome.com/c7ddb31c15.js" crossorigin="anonymous"></script>
     <script src="{% static 'cyberP/js/cyberchancelier_choice.js' %}" crossorigin="anonymous" type="module"></script>
+    <link rel="stylesheet" href="{% static  'cyberP/css/style.css' %}">
+    <title>CyberParlement</title>
 </head>
 <body>
 {% block content %}
