--- a/cyberP/templates/cyberP/cyberparlements/cyberparlement_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/cyberparlement_list.html
@@ -1,14 +1,5 @@
+{% extends 'base.html' %}
 {% block content %}
-     {{ content|safe }}
-{#    <h1>Liste des Cyberparlements</h1>#}
-{#    {% for c in cyberparlements %}#}
-{#        <a href="{% url 'cyberP:cyberparlement-detail' pk=c.idcyberparlement %}">#}
-{#            <div style="padding: 10px; border: black solid 1px; margin-bottom: 5px">#}
-{#                {{ c.nom }}#}
-{#                <a href="{% url 'cyberP:cyberparlement-update' pk=c.idcyberparlement %}">#}
-{#                    <button>Modifier</button>#}
-{#                </a>#}
-{#            </div>#}
-{#        </a>#}
-{#    {% endfor %}#}
+    <h1>Liste des CyberParlements</h1>
+    {{ content|safe }}
 {% endblock content %}
