(oublie de stage certains fichiers du dernier commit)

--- a/ceffdevCyberP/templates/base.html
+++ b/ceffdevCyberP/templates/base.html
@@ -10,7 +10,9 @@
     <title>CyberParlement</title>
 </head>
 <body>
-{% block content %}
-{% endblock %}
+<div class="base-container">
+    {% block content %}
+    {% endblock %}
+</div>
 </body>
 </html>
