--- a/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_container_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_container_list.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class=cp-container>
+    <div class="cp-element-container">
+        <div class=cp-name>{}</div>
+        <div class=cyberchancelier-cp-container title="{}"><i class="fas fa-crown"></i></div>
+        <div class=description-cp-container>{}</div>
+        <div class=update-cp-container>
+            <a href="{}/cyberparlements/{}/update">
+                <button class="btn-cp btn-update" title="Modifier le cyberparlement">
+                    <i class="fas fa-pen"></i>
+                </button>
+            </a>
+        </div>
+        <div class=member-list-cp-container>
+            <a href="{}/cyberparlements/{}/members">
+                <button class="btn-cp btn-members" title="Afficher la liste des membres du cyberparlement">
+                    <i class="fas fa-users"></i>
+                </button>
+            </a>
+        </div>
+        <div class=add-cp-container>
+            <a href="{}/cyberparlements/{}/add">
+                <button class="btn-cp btn-add" title="Ajouter un cyberparlement">
+                    <i class="fas fa-plus"></i>
+                </button>
+            </a>
+        </div>
+        <div class=move-cp-container>
+            <a href="{}/cyberparlements/{}/move">
+                <button class="btn-cp btn-add" title="Déplacer le cyberparlement">
+                    <i class="fas fa-arrows-alt"></i>
+                </button>
+            </a>
+        </div>
+    </div>
