--- a/cyberP/static/cyberP/css/style.css
+++ b/cyberP/static/cyberP/css/style.css
@@ -5,12 +5,126 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    background: rgb(229, 229, 229);
+    /*filter: invert(1) hue-rotate(180deg);*/
+}
+
+.base-container {
+    background: rgb(255, 255, 255);
+    max-width: 1250px;
+    margin: auto;
+    border-right: solid rgb(0, 0, 0) 3px;
+    border-left: solid rgb(0, 0, 0) 3px;
+    border-bottom: solid rgb(0, 0, 0) 3px;
+}
+
+.cp-all-container {
+    max-width: 1150px;
+    margin: auto;
+}
+
+.title-cp-list {
+    font-size: 45px;
+    padding: 30px 0 30px 0;
+    width: 800px;
+    text-align: center;
+}
+
 .cp-container {
-    padding: 10px;
-    border: solid 2px black;
+    padding: 10px 2px 10px 2px;
+    border: solid 1px black;
     margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.cp-element-container {
+    display: grid;
+    grid-template-columns: 12fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+            "cp-n . . . cp-c"
+            "cp-d cp-u cp-ml cp-a cp-mo";
 }
 
 .cp-list-container {
-    padding: 10px;
+    padding: 5px;
 }
+
+.cp-name {
+    font-size: 30px;
+    padding-left: 10px;
+    grid-area: cp-n;
+}
+
+.cyberchancelier-cp-container {
+    margin-right: 8px;
+    font-size: 22px;
+    grid-area: cp-c;
+    margin-left: 30px;
+    transition: color 1s;
+}
+
+.cyberchancelier-cp-container:hover {
+    color: goldenrod;
+}
+
+.description-cp-container {
+    padding-top: 5px;
+    padding-left: 10px;
+    margin-bottom: 10px;
+    font-style: italic;
+    grid-area: cp-d;
+}
+
+.update-cp-container {
+    grid-area: cp-u;
+}
+
+.member-list-cp-container {
+    grid-area: cp-ml;
+}
+
+.add-cp-container {
+    grid-area: cp-a;
+}
+
+.move-cp-container {
+    grid-area: cp-mo;
+}
+
+.btn-cp {
+    font-size: 18px;
+    width: 60px;
+    height: 28px;
+    margin-left: 5px;
+    margin-right: 5px;
+    background-color: white;
+    border: solid black 2px;
+    color: black;
+    transition: all 0.5s;
+    border-radius: 8px
+}
+
+.btn-cp:hover {
+    background-color: black;
+    color: white;
+}
+
+/*.btn-add:hover {*/
+/*    background-color: darkgreen;*/
+/*    color: lightgreen;*/
+/*    border-color: darkgreen;*/
+/*}*/
+
+/*.btn-update:hover {*/
+/*    background-color: darkorange;*/
+/*    color: lightgoldenrodyellow;*/
+/*    border-color: darkorange;*/
+/*}*/
+
+/*.btn-members:hover {*/
+/*    background-color: darkblue;*/
+/*    color: lightskyblue;*/
+/*    border-color: darkblue;*/
+/*}*/
