--- a/cyberP/templates/cyberP/cyberparlements/cyberparlement_add.html
+++ b/cyberP/templates/cyberP/cyberparlements/cyberparlement_add.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <h1>Création d'un nouveau cyberparlement dans {{ cyberparlement.nom }}</h1>
+    <form method="post">
+        {% csrf_token %}
+        {% for field in form %}
+            {{ field.label_tag }}
+            {{ field }}
+            <br>
+        {% endfor %}
+        <br>
+        <input type="submit" value="Modifier">
+    </form>
+{% endblock content %}
