--- a/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_move_container_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_move_container_list.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class=cp-container>
+    <div class="cp-move-element-container">
+        <div class=cp-name>{}</div>
+        <div class=cyberchancelier-cp-container title="{}"><i class="fas fa-crown"></i></div>
+        <div class=description-cp-container>{}</div>
+    </div>
