--- a/ceffdevCyberP/templates/base.html
+++ b/ceffdevCyberP/templates/base.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/c7ddb31c15.js" crossorigin="anonymous"></script>
     <script src="{% static 'cyberP/js/cyberchancelier_choice.js' %}" crossorigin="anonymous" type="module"></script>
+    <script src="{% static 'cyberP/js/cyberparlement_move.js' %}" crossorigin="anonymous" type="module"></script>
+    <script src="{% static 'cyberP/js/user_choice.js' %}" crossorigin="anonymous" type="module"></script>
     <link rel="stylesheet" href="{% static  'cyberP/css/style.css' %}">
     <title>CyberParlement</title>
 </head>
