--- a/cyberP/templates/cyberP/cyberparlements/cyberparlement_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/cyberparlement_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="cp-all-container">
-        <div class="title-cp-list">Liste des CyberParlements</div>
+        <div class="title-cp-list">Liste des <b>CyberParlements</b></div>
         {{ content|safe }}
     </div>
 {% endblock content %}
