--- a/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_move_container_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_move_container_list.html
@@ -1,5 +1,10 @@
-<div class=cp-container>
+<div class="cp-container">
     <div class="cp-move-element-container">
+        <div class="cp-move-selected">
+            <button value="{}" onclick="getCyberparlementSelected(this.value)" class=btn-cp>
+                <i class="fas fa-check-circle"></i>
+            </button>
+        </div>
         <div class=cp-name>{}</div>
         <div class=cyberchancelier-cp-container title="{}"><i class="fas fa-crown"></i></div>
         <div class=description-cp-container>{}</div>
