--- a/cyberP/templates/cyberP/cyberparlements/cyberparlement_update.html
+++ b/cyberP/templates/cyberP/cyberparlements/cyberparlement_update.html
@@ -1,26 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Modification de {{ cyberparlement.nom }}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {% for field in form %}
-            {{ field.label_tag }}
-            {{ field }}
+    <div class="cp-all-container">
+        <div class="title-cp">Modification de <b>{{ cyberparlement.nom }}</b></div>
+        <form method="post">
+            {% csrf_token %}
+            {% for field in form %}
+                <div class="field-container">
+                    <div class="label">
+                        {{ field.label }}
+                    </div>
+                    {{ field }}
+                </div>
+            {% endfor %}
+            <div class="btn-cyberchancelier-choice-container">
+                <button class="btn-cyberchancelier-choice" type="button">Sélectionner un Cyberchancelier</button>
+            </div>
+            <div class="btn-save-container">
+                <input class="btn-save" type="submit" value="Modifier">
+            </div>
+        </form>
+        <div class="modal-cyberchancelier-choice">
+            <label>Cyberchancelier:
+                <select name="cyberchancelier" id="cyberchancelier">
+                    {% for member in members %}
+                        <option value="{{ member.idpersonne }}">{{ member.prenom }} {{ member.nom }}</option>
+                    {% endfor %}
+                </select>
+            </label>
             <br>
-        {% endfor %}
-        <br>
-        <input type="submit" value="Modifier">
-    </form>
-    <hr>
-    <div>
-        <label>Cyberchancelier:
-            <select name="cyberchancelier" id="cyberchancelier">
-                {% for member in members %}
-                    <option value="{{ member.idpersonne }}">{{ member.prenom }} {{ member.nom }}</option>
-                {% endfor %}
-            </select>
-        </label>
-        <br>
-        <input type="submit" id='submit-cyberchancelier' value="Enregistrer">
+            <input type="submit" id='submit-cyberchancelier' value="Enregistrer">
+        </div>
     </div>
 {% endblock content %}
