--- a/cyberP/templates/cyberP/index.html
+++ b/cyberP/templates/cyberP/index.html
@@ -1,3 +1,19 @@
+{% extends 'base.html' %}
 {% block content %}
-Page d'index
+    <div class="cp-all-container">
+        <div class="title-cp-list">Sélectionnez un utilisateur</div>
+        <div class="user-field">
+            <div class="user-label">Utilisateur</div>
+            <label>
+                <select name="user" id="user">
+                    {% for personne in personnes %}
+                        <option value="{{ personne.idpersonne }}">
+                            {{ personne.prenom }} {{ personne.nom }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </label>
+        </div>
+        <input class="btn-save" type="submit" id='submit-user' value="Enregistrer">
+    </div>
 {% endblock content %}
