Modification liste des cyberparlement (+ pour le déplacement) et modal

--- a/ceffdevCyberP/templates/base.html
+++ b/ceffdevCyberP/templates/base.html
@@ -8,6 +8,7 @@
     <script src="{% static 'cyberP/js/cyberchancelier_choice.js' %}" crossorigin="anonymous" type="module"></script>
     <script src="{% static 'cyberP/js/cyberparlement_move.js' %}" crossorigin="anonymous" type="module"></script>
     <script src="{% static 'cyberP/js/user_choice.js' %}" crossorigin="anonymous" type="module"></script>
+    <script src="{% static 'cyberP/js/modal.js' %}" crossorigin="anonymous" type="module"></script>
     <link rel="stylesheet" href="{% static  'cyberP/css/style.css' %}">
     <title>CyberParlement</title>
 </head>
