--- a/cyberP/templates/cyberP/cyberparlements/cyberparlement_update.html
+++ b/cyberP/templates/cyberP/cyberparlements/cyberparlement_update.html
@@ -13,22 +13,28 @@
                 </div>
             {% endfor %}
             <div class="btn-cyberchancelier-choice-container">
-                <button class="btn-cyberchancelier-choice" type="button">Sélectionner un Cyberchancelier</button>
+                <button class="btn-cyberchancelier-choice modal-btn" type="button">Sélectionner un Cyberchancelier</button>
             </div>
             <div class="btn-save-container">
                 <input class="btn-save" type="submit" value="Modifier">
             </div>
         </form>
-        <div class="modal-cyberchancelier-choice">
-            <label>Cyberchancelier:
-                <select name="cyberchancelier" id="cyberchancelier">
-                    {% for member in members %}
-                        <option value="{{ member.idpersonne }}">{{ member.prenom }} {{ member.nom }}</option>
-                    {% endfor %}
-                </select>
-            </label>
-            <br>
-            <input type="submit" id='submit-cyberchancelier' value="Enregistrer">
+        <div class="modal-bg">
+            <div class="modal-cyberchancelier-choice modal">
+                <span class="title-cyberchancelier-choice">Sélection du Cyberchancelier</span>
+                <div class="cyberchancelier-field">
+                    <div class="cyberchancelier-label">Cyberchancelier</div>
+                    <label>
+                        <select name="cyberchancelier" id="cyberchancelier">
+                            {% for member in members %}
+                                <option value="{{ member.idpersonne }}">{{ member.prenom }} {{ member.nom }}</option>
+                            {% endfor %}
+                        </select>
+                    </label>
+                    <button class="modal-save btn-cyberchancelier-save" id="submit-cyberchancelier">Enregistrer</button>
+                    <span class="modal-close"><i class="fas fa-times"></i></span>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock content %}
