--- a/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_container_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_container_list.html
@@ -1,7 +1,8 @@
-<div class=cp-container>
+<div class=cp-container style="background-color: {}">
     <div class="cp-element-container">
         <div class=cp-name>{}</div>
         <div class=cyberchancelier-cp-container title="{}"><i class="fas fa-crown"></i></div>
+        <div class="visibility-cp-container" title="{}">{}</div>
         <div class=description-cp-container>{}</div>
         <div class=update-cp-container>
             <a href="{}/cyberparlements/{}/update">
