--- a/cyberP/templates/cyberP/members/member_list.html
+++ b/cyberP/templates/cyberP/members/member_list.html
@@ -2,19 +2,21 @@
 {% block content %}
     <div class="cp-all-container">
         <div class="title-cp">Membres de <b>{{ cyberparlement.nom }}</b></div>
-        {% for member in members %}
-            <div class="member-container">
-                <div class="member-name">
-                    {{ member.prenom }} {{ member.nom }}
-                </div>
-                {% if member.role != cyberchancelier %}
-                    <div class="btn-ban-container">
-                        <a href="{% url 'cyberP:cyberparlement-member-confirm-delete' pk=member.idmembrecyberparlement %}">
-                            <button class="btn-ban">Ban</button>
-                        </a>
+        <div class="member-list-container">
+            {% for member in members %}
+                <div class="member-container">
+                    <div class="member-name">
+                        {{ member.prenom }} {{ member.nom }}
                     </div>
-                {% endif %}
-            </div>
-        {% endfor %}
+                    {% if member.role != cyberchancelier %}
+                        <div class="btn-ban-container">
+                            <a href="{% url 'cyberP:cyberparlement-member-confirm-delete' pk=member.idmembrecyberparlement %}">
+                                <button class="btn-ban"><i class="fas fa-user-slash"></i></button>
+                            </a>
+                        </div>
+                    {% endif %}
+                </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
