Modification liste des cyberparlements + droit utilisateurs (bug)

--- a/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_move_container_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_move_container_list.html
@@ -1,11 +1,17 @@
 <div class="cp-container">
     <div class="cp-move-element-container">
         <div class="cp-move-selected">
-            <button value="{}" onclick="getCyberparlementSelected(this.value)" class=btn-cp>
+            <button value="{{ cyberparlement.idcyberparlement }}" onclick="getCyberparlementSelected(this.value)" class=btn-cp>
                 <i class="fas fa-check-circle"></i>
             </button>
         </div>
-        <div class=cp-name>{}</div>
-        <div class=cyberchancelier-cp-container title="{}"><i class="fas fa-crown"></i></div>
-        <div class=description-cp-container>{}</div>
+        <div class=cp-name>{{ cyberparlement.nom }}</div>
+        <div class=cyberchancelier-cp-container title="{{ cyberparlement.cyberchancelier.prenom }} {{ cyberparlement.cyberchancelier.nom }}">
+            <i class="fas fa-crown"></i>
+        </div>
+        {% if cyberparlement.description %}
+            <div class=description-cp-container>{{ cyberparlement.description }}</div>
+        {% else %}
+            <div class=description-cp-container>Aucune description</div>
+        {% endif %}
     </div>
