--- a/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_container_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/includes/cyberparlement_container_list.html
@@ -1,47 +1,65 @@
 <div class=cp-container>
-{#    {{ cyberparlement.idcyberparlement }}#}
-{#    {% for c in cyberparlement.allcyberchancelier %}#}
-{#        {{ c }}#}
-        {#            {% if iduser in c.person %}#}
-        {#                {{ iduser }}#}
-        {#            {% endif %}#}
-{#    {% endfor %}#}
     <div class="cp-element-container">
         <div class=cp-name>{{ cyberparlement.nom }}</div>
         <div class=cyberchancelier-cp-container title="{{ cyberparlement.cyberchancelier.prenom }} {{ cyberparlement.cyberchancelier.nom }}">
             <i class="fas fa-crown"></i>
         </div>
-        <div class="visibility-cp-container" title="{{ cyberparlement.visibilite }}"><i class="fas fa-eye"></i></div>
-        <div class=description-cp-container>{{ cyberparlement.description }}</div>
-
-        {% if iduser in allcyberchancelier.idpersonne|slugify %}
-            <div class=update-cp-container>
-                <a href="{% url 'cyberP:cyberparlement-update' pk=cyberparlement.idcyberparlement|add:"0" %}">
-                    <button class="btn-cp btn-update" title="Modifier le cyberparlement">
-                        <i class="fas fa-pen"></i>
-                    </button>
-                </a>
-            </div>
-            <div class=member-list-cp-container>
-                <a href="{% url 'cyberP:cyberparlement-member-list' pk=cyberparlement.idcyberparlement|add:"0" %}">
-                    <button class="btn-cp btn-members" title="Afficher la liste des membres du cyberparlement">
-                        <i class="fas fa-users"></i>
-                    </button>
-                </a>
-            </div>
-            <div class=add-cp-container>
-                <a href="{% url 'cyberP:cyberparlement-add' pk=cyberparlement.idcyberparlement|add:"0" %}">
-                    <button class="btn-cp btn-add" title="Ajouter un cyberparlement">
-                        <i class="fas fa-plus"></i>
-                    </button>
-                </a>
-            </div>
-            <div class=move-cp-container>
-                <a href="{% url 'cyberP:cyberparlement-move' pk=cyberparlement.idcyberparlement|add:"0" %}">
-                    <button class="btn-cp btn-add" title="Déplacer le cyberparlement">
-                        <i class="fas fa-arrows-alt"></i>
-                    </button>
-                </a>
+        <div class="status-cp-container" title="Brouillon">
+            {% if cyberparlement.statut == draftstatus %}
+                <i class="fas fa-exclamation-circle"></i>
+            {% endif %}
+        </div>
+        <div class="visibility-cp-container" title="{{ cyberparlement.visibilite }}">
+            {% if cyberparlement.visibilite == privatevisibility %}
+                <i class="fas fa-lock"></i>
+            {% else %}
+                <i class="fas fa-eye"></i>
+            {% endif %}
+        </div>
+        <div class=description-cp-container>
+            {% if cyberparlement.description %}
+                {{ cyberparlement.description }}
+            {% else %}
+                Aucune description
+            {% endif %}
+        </div>
+        <div class="hide-cp-container" onclick="hideChildren(this)">
+            <i class="fas fa-chevron-up"></i>
+        </div>
+    </div>
+    {% for cyberchancelier in cyberparlement.allcyberchancelier %}
+        {% if iduser|add:"0" == cyberchancelier.idpersonne %}
+            <div class="cp-btn-container">
+                <div class=update-cp-container>
+                    <a href="{% url 'cyberP:cyberparlement-update' pk=cyberparlement.idcyberparlement|add:"0" %}">
+                        <button class="btn-cp btn-update" title="Modifier le cyberparlement">
+                            <i class="fas fa-pen"></i> Modifier
+                        </button>
+                    </a>
+                </div>
+                <div class=member-list-cp-container>
+                    <a href="{% url 'cyberP:cyberparlement-member-list' pk=cyberparlement.idcyberparlement|add:"0" %}">
+                        <button class="btn-cp btn-members" title="Afficher la liste des membres du cyberparlement">
+                            <i class="fas fa-users"></i> Membres
+                        </button>
+                    </a>
+                </div>
+                <div class=add-cp-container>
+                    <a href="{% url 'cyberP:cyberparlement-add' pk=cyberparlement.idcyberparlement|add:"0" %}">
+                        <button class="btn-cp btn-add" title="Ajouter un cyberparlement">
+                            <i class="fas fa-plus"></i> Ajouter
+                        </button>
+                    </a>
+                </div>
+                {% if cyberparlement.statut == draftstatus and cyberparlement.cyberparlementparent_id != None %}
+                    <div class=move-cp-container>
+                        <a href="{% url 'cyberP:cyberparlement-move' pk=cyberparlement.idcyberparlement|add:"0" %}">
+                            <button class="btn-cp btn-add" title="Déplacer le cyberparlement">
+                                <i class="fas fa-arrows-alt"></i> Déplacer
+                            </button>
+                        </a>
+                    </div>
+                {% endif %}
             </div>
         {% endif %}
-    </div>
+    {% endfor %}
