--- a/cyberP/templates/cyberP/index.html
+++ b/cyberP/templates/cyberP/index.html
@@ -14,6 +14,6 @@
                 </select>
             </label>
         </div>
-        <input class="btn-save" type="submit" id='submit-user' value="Enregistrer">
+        <input class="btn-save hidden" type="submit" id='submit-user' value="Enregistrer">
     </div>
 {% endblock content %}
