--- a/cyberP/templates/cyberP/members/member_list.html
+++ b/cyberP/templates/cyberP/members/member_list.html
@@ -11,7 +11,7 @@
                         </div>
                         <div class="btn-ban-container">
                             <a href="{% url 'cyberP:cyberparlement-member-confirm-delete' pk=member.idmembrecyberparlement %}">
-                                <button class="btn-ban"><i class="fas fa-user-slash"></i></button>
+                                <button class="btn-ban" title="Exclure ce membre"><i class="fas fa-user-slash"></i></button>
                             </a>
                         </div>
                     </div>
