--- a/cyberP/static/cyberP/css/style.css
+++ b/cyberP/static/cyberP/css/style.css
@@ -180,6 +180,10 @@ input[type=submit] {
     color: white;
 }
 
+.btn-change-user {
+    width: 100%;
+}
+
 .label {
     font-size: 24px;
     margin-bottom: 5px;
@@ -348,23 +352,75 @@ input[type=submit] {
     color: black;
 }
 
-/* width */
 ::-webkit-scrollbar {
     width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
     background: #646464;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
     background: white;
     border-radius: 10px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #d2d2d2;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.6s;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+.btn-confirm-delete-container {
+    text-align: center;
+}
+
+.btn-confirm-delete {
+    font-size: 30px;
+    padding: 5px;
+    width: 40%;
+    height: 50px;
+}
+
+.msg-confirm-delete {
+    font-size: 30px;
+    padding-top: 20%;
+    margin-bottom: 40px;
+    text-align: center;
 }
