--- a/cyberP/templates/cyberP/members/member_list.html
+++ b/cyberP/templates/cyberP/members/member_list.html
@@ -10,7 +10,7 @@
                             {{ member.prenom }} {{ member.nom }}
                         </div>
                         <div class="btn-ban-container">
-                            <a href="{% url 'cyberP:cyberparlement-member-confirm-delete' pk=member.idmembrecyberparlement %}">
+                            <a href="{% url 'cyberP:cyberparlement-member-confirm-delete' pk=member.idmembrecyberparlement slug=cyberparlement.slug%}">
                                 <button class="btn-ban" title="Exclure ce membre"><i class="fas fa-user-slash"></i></button>
                             </a>
                         </div>
