--- a/cyberP/templates/cyberP/cyberparlements/cyberparlement_list.html
+++ b/cyberP/templates/cyberP/cyberparlements/cyberparlement_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="cp-all-container">
-        <div class="title-cp-list">Liste des <b>CyberParlements</b></div>
+        <div class="title-cp">Liste des <b>CyberParlements</b></div>
         <a href="{% url 'cyberP:index' %}">
             <button class="btn-cp btn-change-user">
                 <i class="fas fa-user"></i> Changer d'utilisateur
@@ -11,18 +11,20 @@
     </div>
     <script type="text/javascript">
         function hideChildren(element) {
-            let parent = (element.parentElement).parentElement
-            let cybeberparlementChildren = parent.children[2]
-            let elementContainer = parent.children[0]
-            let hideIcon = elementContainer.children[5]
+            /*
+            fonction appelé lorsque l'on clique une flèche
+            d'un cyberparlement afin d'afficher ou non ses enfants
+             */
+            let parent = (element.parentElement).parentElement,
+                cybeberparlementChildren = parent.children[2],
+                elementContainer = parent.children[0],
+                hideIcon = elementContainer.children[5]
             if (cybeberparlementChildren != null) {
                 if (cybeberparlementChildren.classList.contains('hidden')) {
                     hideIcon.innerHTML = "<i class=\"fas fa-chevron-up\"></i>"
                     cybeberparlementChildren.classList.remove('hidden')
-                    cybeberparlementChildren.classList.add('visible')
                 } else {
                     hideIcon.innerHTML = "<i class=\"fas fa-chevron-down\"></i>"
-                    cybeberparlementChildren.classList.remove('visible')
                     cybeberparlementChildren.classList.add('hidden')
                 }
             }
