--- a/cyberP/templates/cyberP/cyberparlements/cyberparlement_update.html
+++ b/cyberP/templates/cyberP/cyberparlements/cyberparlement_update.html
@@ -31,7 +31,7 @@
                             {% endfor %}
                         </select>
                     </label>
-                    <button class="modal-save btn-cyberchancelier-save" id="submit-cyberchancelier">Enregistrer</button>
+                    <button class="modal-save btn-cyberchancelier-save hidden" id="submit-cyberchancelier">Enregistrer</button>
                     <span class="modal-close"><i class="fas fa-times"></i></span>
                 </div>
             </div>
