--- a/cyberP/templates/cyberP/index.html
+++ b/cyberP/templates/cyberP/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="cp-all-container">
-        <div class="title-cp-list">Authentification</div>
+        <div class="title-cp">Authentification</div>
         <div class="user-field">
             <div class="user-label">Utilisateur</div>
             <label>
