--- a/templates/cyberparlementProject/cyberparlements/cyberparlement_update.html
+++ b/templates/cyberparlementProject/cyberparlements/cyberparlement_update.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-    <h1>Modifier le Cyberparlement</h1>
+    <h1>Modifier le Cyberparlement {{ cyberparlement }}</h1>
     <form method="POST">
         {% include 'cyberparlementProject/includes/form_include.html' %}
         <div class="buttons d-flex flex-row justify-content-end">
